--- a/Documentation/services-configuration.tex
+++ b/Documentation/services-configuration.tex
@@ -186,8 +186,26 @@ POSTGRESQL:
 \end{lstlisting}
 
 \subsubsection[Javascript]{Javascript}
+
+\begin{flushleft}
+    Uses Regex and default java functions in order to check if the fields are valid, yet it doesn't really look at specific stuff.
+\end{flushleft}
+
+\begin{flushleft}
+    Uses Ajax when receiving a response from the server, so can format a response for the user.
+\end{flushleft}
+
 \subsubsection[PostgreSQL]{PostgreSQL}
+
+\begin{flushleft}
+    Uses functions and procedures in order to detect errors, alongside with Regex.
+\end{flushleft}
+
 \subsubsection[PHP]{PHP}
+\begin{flushleft}
+    Uses functions and procedures in order to detect errors, alongside with Regex.
+    PHP uses the errors captured to form a response for the client.
+\end{flushleft}
 
 \subsection{Error Thread}\label{subsec:error-thread}
 \subsubsection{Notes}\label{subsubsec:notes}
