--- a/Documentation/docker_documentation.tex
+++ b/Documentation/docker_documentation.tex
@@ -137,6 +137,13 @@
     \end{flushleft}
 
     \newpage
+    \subsubsection[Backup Dealer Docker-Compose]{Backup Dealer Docker-Compose}
+    \lstinputlisting[language=Docker,label={lst:BackupDealerDockerCompose}]{../backup_dealer-compose.yml}
+    \begin{flushleft}
+        The main and only thing to point out, besides the fact that uses a Dockerfile, is that it's full of variables,
+        this topic will be covered in the deployment section.
+    \end{flushleft}
+
     \newpage
     \subsubsection[Backup Dealer Dockerfile]{Backup Dealer Dockerfile}
     \lstinputlisting[language=Docker,label={lst:BackupDealerlDockerfile}]{../Dockerfiles/backup_client/Dockerfile}
