--- a/Documentation/services-configuration.tex
+++ b/Documentation/services-configuration.tex
@@ -1,3 +1,8 @@
+\subsection{Portainer Configuration}\label{subsec:portainer-configuration}
+\subsection{Adminer Configuration}\label{subsec:adminer-configuration}
+\subsection{Nginx Configuration}\label{subsec:nginx-configuration}
+\subsection{PHP Configuration}\label{subsec:php-configuration}
+
 \subsection{PostgreSQL Configuration}\label{subsec:postgresql-configuration}
 \begin{flushleft}
     Currently, the database contains 2 databases.
