--- a/Documentation/demo.tex
+++ b/Documentation/demo.tex
@@ -1,4 +1,4 @@
-\subsubsection[Main Page]{Main Page}
+\subsection[Main Page]{Main Page}\label{subsec:main-page}
 \begin{center}
     \includegraphics[scale=0.3]{demo_index}
 \end{center}
@@ -6,7 +6,7 @@
     A simple view of the menu with different menus available, and a product showcase.
 \end{flushleft}
 
-\subsubsection[Registration Success Testing]{Registration Success Testing}
+\subsection[Registration Success Testing]{Registration Success Testing}\label{subsec:registration-success-testing}
 \begin{center}
     \includegraphics[scale=0.8]{demo_registration_success}
 \end{center}
@@ -14,7 +14,7 @@
     We are able to receive responses from the server without the need of updating the page, in this case we were able to succeed in our registration.
 \end{flushleft}
 
-\subsubsection[Registration Fail Testing]{Registration Fail Testing}
+\subsection[Registration Fail Testing]{Registration Fail Testing}\label{subsec:registration-fail-testing}
 \begin{center}
     \includegraphics[scale=0.8]{demo_registration_failed}
 \end{center}
@@ -22,7 +22,7 @@
     Since our user was already registered we receive a error response.
 \end{flushleft}
 
-\subsubsection[Login Unactivated Account Fail Testing]{Login Unactivated Account Fail Testing}
+\subsection[Login Unactivated Account Fail Testing]{Login Unactivated Account Fail Testing}\label{subsec:login-unactivated-account-fail-testing}
 \begin{center}
     \includegraphics[scale=0.8]{demo_login_failed_unactivated}
 \end{center}
@@ -30,7 +30,7 @@
     In order to activate our account, we need to activate our account via the received email.
 \end{flushleft}
 
-\subsubsection[Received email Testing]{Received email Testing}
+\subsection[Received email Testing]{Received email Testing}\label{subsec:received-email-testing}
 \begin{center}
     \includegraphics[scale=0.5]{demo_received_email}
 \end{center}
@@ -38,7 +38,7 @@
     As expected, we are able to receive a mail to our given email.
 \end{flushleft}
 
-\subsubsection[Activate Account Succeed Testing]{Activate Account Succeed Testing}
+\subsection[Activate Account Succeed Testing]{Activate Account Succeed Testing}\label{subsec:activate-account-succeed-testing}
 \begin{center}
     \includegraphics[scale=0.8]{demo_activate_account_succeed}
 \end{center}
@@ -46,7 +46,7 @@
     Once we open the link given by the server through the mail, we are able to activate our account.
 \end{flushleft}
 
-\subsubsection[Login Success Testing]{Login Success Testing}
+\subsection[Login Success Testing]{Login Success Testing}\label{subsec:login-success-testing}
 \begin{center}
     \includegraphics[scale=0.3]{demo_login_succeed}
 \end{center}
@@ -55,7 +55,7 @@
     menu, as a proof we can see how the menu it's quite different compared with when we didn't log in.
 \end{flushleft}
 
-\subsubsection[Add Shipping Address Fail Testing ]{Add Shipping Address Fail Testing}
+\subsection[Add Shipping Address Fail Testing ]{Add Shipping Address Fail Testing}\label{subsec:add-shipping-address-fail-testing}
 \begin{center}
     \includegraphics[scale=0.5]{demo_shipping_address_error}
 \end{center}
@@ -63,7 +63,7 @@
     Since our country code doesn't consist of 2 characters, it returns error.
 \end{flushleft}
 
-\subsubsection[Add Shipping Address Success Testing ]{Add Shipping Address Success Testing}
+\subsection[Add Shipping Address Success Testing ]{Add Shipping Address Success Testing}\label{subsec:add-shipping-address-success-testing}
 \begin{center}
     \includegraphics[scale=0.6]{demo_shipping_address_succeed}
 \end{center}
@@ -71,7 +71,7 @@
     Once we respect the criteria from the fields, we are able to upload our payment method.
 \end{flushleft}
 
-\subsubsection[Remove Shipping Address Success Testing ]{Remove Shipping Address Success Testing}
+\subsection[Remove Shipping Address Success Testing ]{Remove Shipping Address Success Testing}\label{subsec:remove-shipping-address-success-testing}
 \begin{center}
     \includegraphics[scale=0.6]{demo_shipping_address_delete_succeed}
 \end{center}
@@ -79,7 +79,7 @@
     Deleted the created entries without issues.
 \end{flushleft}
 
-\subsubsection[Cookies Testing]{Cookies Testing}
+\subsection[Cookies Testing]{Cookies Testing}\label{subsec:cookies-testing}
 \begin{center}
     \includegraphics[scale=0.6]{demo_cookies}
 \end{center}
