--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -96,6 +96,11 @@
     \section{Services Configuration}\label{sec:ServicesConfiguration}
     \input{services-configuration}
 
+%    \newpage
+%%    Webpage Configuration
+%    \section{Services Configuration}\label{sec:WebpageConfiguration}
+%    \input{services-configuration}
+
     \newpage
 %    Service deployment
     \section{Services Deployment}\label{sec:ServiceDeployment}
