--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -96,10 +96,10 @@
     \section{Services Configuration}\label{sec:ServicesConfiguration}
     \input{services-configuration}
 
-%    \newpage
-%%    Webpage Configuration
-%    \section{Services Configuration}\label{sec:WebpageConfiguration}
-%    \input{services-configuration}
+    \newpage
+%    Webpage Configuration
+    \section{Web Page Documentation}\label{sec:Web Page Documentation}
+    \input{web-documentation.tex}
 
     \newpage
 %    Service deployment
