--- a/Documentation/services-deployment.tex
+++ b/Documentation/services-deployment.tex
@@ -109,3 +109,17 @@ sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-
 sudo chmod +x /usr/local/bin/docker-compose
 \end{lstlisting}
 \end{flushleft}
+
+
+\subsubsection{Repository installation}\label{subsubsec:repo-installation}
+\begin{flushleft}
+    The only step is to clone the repository.
+    \begin{flushleft}
+        \textbf{git clone \url{\repoURL}}
+    \end{flushleft}
+\end{flushleft}
+
+
+
+
+\subsection{Repository customization}\label{subsec:repor-customization}
