--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -19,6 +19,7 @@
 
 \newcommand\email{filter.oriol@gmail.com}
 \newcommand\projectname{Online Shop Structure}
+\newcommand\repoURL{https://github.com/OriolFilter/filterweb/}
 
 
 %\title{Online Shop Structure}
@@ -55,6 +56,7 @@
 \rfoot{Page \thepage \hspace{1pt} of~\pageref{LastPage}}
 \lhead{\projectname}
 \rhead{\email}
+
 %conf 2
 %\rhead{Page \thepage \hspace{1pt} of \pageref{LastPage}}
 %\lfoot{\email}
