--- a/Documentation/services-configuration.tex
+++ b/Documentation/services-configuration.tex
@@ -88,7 +88,7 @@
     Taking a look at the graph we can see how all the tables has a relation with the users table, bind by its user id.
     If we took a look at the queries used to create the tables, we could see how all would get deleted on cascade in case
     that the user was deleted.
-    \url{https://github.com/OriolFilter/filterweb/blob/master/Dockerfiles/postgresql/sources/shop_skel.sql}
+    \url{\repoURL blob/master/Dockerfiles/postgresql/sources/shop_skel.sql}
 \end{flushleft}
 
 
