--- a/Documentation/services-deployment.tex
+++ b/Documentation/services-deployment.tex
@@ -122,4 +122,6 @@ sudo chmod +x /usr/local/bin/docker-compose
 
 
 
-\subsection{Repository customization}\label{subsec:repor-customization}
+\subsection{Repository customization}\label{subsec:repo-customization}
+\subsubsection[Main server customization]{Main server customization}
+\lstinputlisting[language=bash, label={lst:main_env_file}]{../.env}
