--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -18,7 +18,8 @@
 % Vars
 
 \newcommand\email{filter.oriol@gmail.com}
-\newcommand\projectname{Online Shop Structure}
+%\newcommand\projectname{Online Shop Structure}
+\newcommand\projectname{Online Shop Template}
 \newcommand\repoURL{https://github.com/OriolFilter/filterweb/}
 
 
